# api/swagger.json
@@ -70,26 +70,6 @@
                 }
             }
         },
-        "/hello": {
-            "get": {
-                "description": "Responds with a \"Hello, World!\" message",
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "hello"
-                ],
-                "summary": "Returns a greeting message",
-                "responses": {
-                    "200": {
-                        "description": "Hello, World!",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/pdfReport": {
             "get": {
                 "description": "Генерирует и возвращает PDF отчет",
